--- a/produk.html
+++ b/produk.html
@@ -11,123 +11,147 @@
     <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/bootstrap/bootstrap-icons.css">
     <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.6.3.min.js"></script>
     <style>
-        /* tulis kode CSS internal di bawah sini */
-
-        @media (max-width:600px) {
-            div.navigasi {
-                display: none;
-            }
-
-            a.shop {
-                margin-right: 20px;
-                margin-left: auto;
-            }
-
-            header div.kiri,
-            header div.kanan {
-                width: 100%;
-                padding: 30px;
-                text-align: center;
-            }
-
-            div.produk,
-            div.team {
-                width: 50%;
-            }
-
-            div.testimoni {
-                width: 100%;
-                margin-bottom: 30px;
-            }
-
+        section {
+            min-height: 90vh;
         }
-
-
-        /* Batas Akhir penulisan kode CSS internal */
     </style>
+    <script src="js/jquery-3.6.3.min.js"></script>
 </head>
 
 <body>
-
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg bisadicopy">
-        <div class="container">
-            <a class="navbar-brand" href="https://www.rikikurnia.com">
-                <img src="images/logo/logo_kuy.png" height="30" alt="image">
+    <nav class="navbar navbar-expand-lg bg-success navbar-dark w-100 fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img class="logo" src="images/logo/logo_kuy.png" height="40">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav11"
-                aria-controls="navbarNav11" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav11">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html#best-seller">best-seller</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto me-3 mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#our-team">our team</a>
+                        <a class="nav-link" href="index.html#best-seller">Best Seller</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#review">review</a>
+                        <a class="nav-link" href="index.html#our-team">Our Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact-us">contact-us</a>
+                        <a class="nav-link" href="index.html#review">Review</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#contact-us">Contact Us</a>
                     </li>
                 </ul>
-                <a class="btn btn-outline-light ms-md-3" href="https://wa.me/6281290465033">Button</a>
+                <a class="btn btn-outline-light" href="https://wa.me/6281290465034" target="_blank">Chat <i
+                        class="bi bi-whatsapp"></i></a>
+
             </div>
         </div>
     </nav>
 
-    <section class="riki-block produk text-center my-5 py-5">
-        <div class="container ">
-            <h1>Pilih produk Anda</h1>
-            <p class="fs-4">Kualitas biji kopi pilihan, fresh diambil langsung dari petani</p>
+    <section class="produk text-center my-5 py-5">
+        <div class="container">
+            <h1>Pilih Produk Anda</h1>
+            <p class="fs-4">Kualitas terbaik biji kopi pilihan, Fresh diambil langsung dari petani</p>
             <hr class="border border-success border-3 opacity-75">
 
+            <div class="form-floating col-md-4 mx-auto my-5">
 
-            <div class="form-floating col-lg-4 mx-auto">
                 <select class="form-select" id="select_kopi">
                     <option selected disabled>-</option>
                     <option value="arabica">Arabica</option>
                     <option value="robusta">Robusta</option>
-                    <option value="nonkopi">Non Kopi</option>
+                    <option value="non-kopi">selain kopi</option>
                 </select>
+
                 <label for="select_kopi">Pilih Jenis Kopi</label>
+
             </div>
 
-            <div id="baris_produk" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 text-center mt-5">
-
-                <div class="col mb-4">
-                    <div class="card">
-                        <img src="images/produk/product_capuchino.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Cappuccino</h5>
-                            <div class="row hargasize my-4">
-                                <div class="col">
-                                    100ml
-                                </div>
-                                <div class="col">
-                                    45.000
-                                </div>
-                            </div>
-                            <a href="#" class="btn btn-success w-100">Beli</a>
-                        </div>
-                    </div>
-                </div>
-
+            <div id="baris_produk" class="row row-cols-1 row-cols-md-2 row-cols-lg-4 ">
 
             </div>
         </div>
     </section>
 
+    <footer class="bg-success py-4">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a class="nav-link link-light active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link-light" href="index.html#best-seller">Best Seller</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link-light" href="index.html#our-team">Our Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link-light" href="index.html#review">Review</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link-light" href="index.html#contact-us">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4 text-light text-end">
+                    Copyright Kopi Kuy 2023
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script>
-        /* Tulis Javascript Di bawah Sini */
+        var sumber = "https://rikikurnia.com/prakerja/api/kopi"
+        var sumber2 = "data.json"
+
+        select_kopi.onchange = function () {
+            var dipilih = this.value
+            console.log(dipilih)
+            ambilData(dipilih)
+
+        }
+        function ambilData(dipilih) {
+            var template = ""
+            $.getJSON(sumber2).then(function (data) {
+                var data_kopi = data[dipilih]
+                console.log(data_kopi)
+
+                data_kopi.forEach(item => {
+                    template += `<div class="col mb-4">
+                        <div class="card">
+                            <img src="${item.foto}" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">${item.nama}</h5>
+                                <div class="row hargasize my-4">
+                                    <div class="col">
+                                        ${item.size}
+                                    </div>
+                                    <div class="col">
+                                        ${item.harga}
+                                    </div>
+                                </div>
+                                <a target="_blank" href="${item.link}" class="btn btn-primary w-100">Beli</a>
+                            </div>
+                        </div>
+                    </div>`
+                })
+
+                baris_produk.innerHTML = template
+
+            })
+
+        }
 
 
-        /* Batas Akhir penulisan kode Javascript */
     </script>
 </body>
 
